src/evdev-touchpad.c
@@ -481,7 +481,7 @@ touchpad_update_state(struct touchpad_dispatch *touchpad, uint32_t time)
 			touchpad->device->rel.dx = wl_fixed_from_double(dx);
 			touchpad->device->rel.dy = wl_fixed_from_double(dy);
 			touchpad->device->pending_events |=
-				EVDEV_RELATIVE_MOTION;
+				EVDEV_RELATIVE_MOTION | EVDEV_SYN;
 		} else if (touchpad->finger_state == TOUCHPAD_FINGERS_TWO) {
 			if (dx != 0.0)
 				notify_axis(touchpad->device->seat,
