src/evdev.h
@@ -34,6 +34,7 @@ enum evdev_event_type {
 	EVDEV_ABSOLUTE_MT_MOTION = (1 << 2),
 	EVDEV_ABSOLUTE_MT_UP = (1 << 3),
 	EVDEV_RELATIVE_MOTION = (1 << 4),
+	EVDEV_SYN = (1 << 5),
 };
 
 enum evdev_device_capability {
